Fixed layout issues in events component.

--- a/src/app/events-app/events-app.component.css
+++ b/src/app/events-app/events-app.component.css
@@ -3,6 +3,16 @@ h2 {
     color: #fff;
 }
 
+.form-container {
+    max-width: 500px;
+    margin: 0px auto;
+}
+
+.events-container {
+    max-width: 400px;
+    margin: 0px auto;
+}
+
 .fa-plus-square:hover {
     cursor: pointer;
 }
